<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/acivPropic"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/acibBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            android:src="@drawable/ic_back"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/followers_1_s"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/acivPropic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tvFollowing"/>

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/following_1_s"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/acivPropic"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tvFollowers"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/name_1_s"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowers"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/email_1_s"
            app:layout_constraintLeft_toLeftOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvName"/>

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/location_1_s"
            app:layout_constraintLeft_toLeftOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail"/>

        <TextView
            android:id="@+id/tvCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:text="@string/company_1_s"
            android:lines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@+id/tvLocation"/>

        <TextView
            android:id="@+id/tvBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/blog_1_s"
            app:layout_constraintLeft_toLeftOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvCompany"/>

        <TextView
            android:id="@+id/tvPubRepoTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/total_repositories_1_s"
            app:layout_constraintLeft_toLeftOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvBlog"/>

        <TextView
            android:id="@+id/tvPubGistTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/total_gists_1_s"
            app:layout_constraintLeft_toLeftOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvPubRepoTotal"/>
        
        <EditText
            android:id="@+id/etNote"
            android:layout_width="0dp"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:gravity="top"
            android:padding="@dimen/_8sdp"
            android:background="#D2D2D2"
            android:lines="3"
            android:maxLength="150"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@+id/tvPubGistTotal"
            app:layout_constraintLeft_toLeftOf="@+id/tvName"
            app:layout_constraintRight_toRightOf="parent"/>
        
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/acibClearNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clear"
            app:layout_constraintBottom_toTopOf="@+id/etNote"
            app:layout_constraintRight_toRightOf="@+id/etNote"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/acibSaveNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_24"
            app:layout_constraintBottom_toTopOf="@+id/etNote"
            app:layout_constraintRight_toLeftOf="@+id/acibClearNote"/>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/etNote"/>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/clProgressbar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>